--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "tsc": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest"
   },
