--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -7,6 +7,9 @@ server {
 
   location / {
     try_files $uri $uri/ /index.html;
+    
+    add_header Cross-Origin-Opener-Policy "same-origin" always;
+    add_header Cross-Origin-Embedder-Policy "credentialless" always;
   }
 
   gzip on;
