--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,14 @@
 VITE_DEBUG_MODE=false
 
 # Footer configuration - all footer settings use FOOTER_ prefix
-# Enable/disable footer bar (default: false)
-VITE_FOOTER_ENABLED=false
+# Footer will be shown if any of the following variables are set
 
 # Site name displayed in footer as "Powered by {site name}"
+# If set, shows "Powered by {value}" on the left side
 VITE_FOOTER_POWERED_BY_SITE=
 
 # Friendly links configuration for footer
+# If set, shows links on the right side
 # Format: JSON array of objects with label, url, and description
 # Example: [{"label":"Example","url":"https://example.com","description":"Example site"}]
 VITE_FOOTER_FRIENDLY_LINKS=
