prepare for ai api visualize

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "context-protector-web",
+  "name": "ai-api-visualizer-web",
   "compatibility_date": "2026-01-20",
   "assets": {
     "directory": "./dist"
